--- a/src/css/Table.css
+++ b/src/css/Table.css
@@ -7,18 +7,13 @@ input {
     font: 16px Arial;
 }
 
-td {
+.td_descriptions {
     border-top: 1px solid black;
     cursor: cell;
     padding: 5px;
 }
 
-th {
-    cursor: pointer;
-    padding: 5px;
-}
-
-table {
+.descriptions {
     border: 1px solid black;
     margin: 20px;
 }
